syntax="proto3";

package record.service;

import "models.proto";

option go_package= "recordpb";

service Record {
  rpc Insert(InsertRequest) returns (InsertResponse);
  rpc History(HistoryRequest) returns (HistoryResponse);
  rpc Pay(PayRequest) returns (PayResponse);
}

message Empty{}

message InsertRequest{
  string CarID = 1;
  string UserID = 2;
  string DateStart = 3;
  string Rate = 4;
}

message InsertResponse{}

message HistoryRequest{
  string UserID = 1;
}

message HistoryResponse{
  repeated record.models.Record History = 1;
}

message PayRequest{
  string UserID = 1;
  float QuantityPaid = 2;
}

message PayResponse{
  float AmtRemaining = 1;
}